[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://common/UI/MarketUI.gd" id="1_md0as"]

[node name="MarketUI" type="CanvasLayer"]
visible = false
script = ExtResource("1_md0as")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="Root"]
layout_mode = 2
offset_left = 60.0
offset_top = 80.0
offset_right = 840.0
offset_bottom = 520.0

[node name="Label" type="Label" parent="Root/Panel"]
layout_mode = 2
offset_left = 12.0
offset_top = 12.0
text = "Market UI (placeholder)"

[node name="BuyList" type="ItemList" parent="Root/Panel"]
layout_mode = 2
offset_left = 12.0
offset_top = 40.0
offset_right = 360.0
offset_bottom = 420.0

[node name="SellList" type="ItemList" parent="Root/Panel"]
layout_mode = 2
offset_left = 380.0
offset_top = 40.0
offset_right = 720.0
offset_bottom = 420.0

[node name="PriceInfo" type="Label" parent="Root/Panel"]
layout_mode = 2
offset_left = 12.0
offset_top = 430.0
text = "Money: $0"

[node name="BuyBtn" type="Button" parent="Root/Panel"]
layout_mode = 2
offset_left = 12.0
offset_top = 460.0
text = "Buy"

[node name="SellBtn" type="Button" parent="Root/Panel"]
layout_mode = 2
offset_left = 80.0
offset_top = 460.0
text = "Sell"

[node name="CloseBtn" type="Button" parent="Root/Panel"]
layout_mode = 2
offset_left = 720.0
offset_top = 12.0
offset_right = 768.0
offset_bottom = 43.0
text = "âœ•"

[connection signal="pressed" from="Root/Panel/BuyBtn" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="Root/Panel/SellBtn" to="." method="_on_sell_pressed"]
[connection signal="pressed" from="Root/Panel/CloseBtn" to="." method="_on_close_pressed"]
